thirdparty/include/libs/raylib55/include/raylib.h

    typedef enum bool { false = 0, true = !false } bool;
typedef struct RLVector2 {
    float x;                
    float y;                
} RLVector2;
typedef struct RLVector3 {
    float x;                
    float y;                
    float z;                
} RLVector3;
typedef struct RLMatrix {
    float m0, m4, m8, m12;  
    float m1, m5, m9, m13;  
    float m2, m6, m10, m14; 
    float m3, m7, m11, m15; 
} RLMatrix;
typedef struct RLColor {
    unsigned char r;        
    unsigned char g;        
    unsigned char b;        
    unsigned char a;        
} RLColor;
typedef struct RLTexture {
    unsigned int id;        
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} RLTexture;
typedef RLTexture RLTexture2D;
typedef struct RLRenderTexture {
    unsigned int id;        
    RLTexture texture;        
    RLTexture depth;          
} RLRenderTexture;
typedef RLRenderTexture RLRenderTexture2D;
typedef struct RLCamera3D {
    RLVector3 position;       
    RLVector3 target;         
    RLVector3 up;             
    float fovy;             
    int projection;         
} RLCamera3D;
typedef RLCamera3D RLCamera;    
typedef struct RLCamera2D {
    RLVector2 offset;         
    RLVector2 target;         
    float rotation;         
    float zoom;             
} RLCamera2D;
typedef struct RLShader {
    unsigned int id;        
    int *locs;              
} RLShader;
typedef struct RLRay {
    RLVector3 position;       
    RLVector3 direction;      
} RLRay;
typedef struct RLVrDeviceInfo {
    int hResolution;                
    int vResolution;                
    float hScreenSize;              
    float vScreenSize;              
    float eyeToScreenDistance;      
    float lensSeparationDistance;   
    float interpupillaryDistance;   
    float lensDistortionValues[4];  
    float chromaAbCorrection[4];    
} RLVrDeviceInfo;
typedef struct RLVrStereoConfig {
    RLMatrix projection[2];           
    RLMatrix viewOffset[2];           
    float leftLensCenter[2];        
    float rightLensCenter[2];       
    float leftScreenCenter[2];      
    float rightScreenCenter[2];     
    float scale[2];                 
    float scaleIn[2];               
} RLVrStereoConfig;
typedef enum {
    LOG_ALL = 0,        
    LOG_TRACE,          
    LOG_DEBUG,          
    LOG_INFO,           
    LOG_WARNING,        
    LOG_ERROR,          
    LOG_FATAL,          
    LOG_NONE            
} RLTraceLogLevel;
typedef unsigned char *(*LoadFileDataCallback)(const char *fileName, int *dataSize);    
typedef bool (*SaveFileDataCallback)(const char *fileName, void *data, int dataSize);   
typedef char *(*LoadFileTextCallback)(const char *fileName);            
typedef bool (*SaveFileTextCallback)(const char *fileName, char *text); 
RLAPI void InitWindow(int width, int height, const char *title);  
RLAPI void ClearBackground(RLColor color);                          
RLAPI void BeginDrawing(void);                                    
RLAPI void EndDrawing(void);                                      
RLAPI void BeginMode2D(RLCamera2D camera);                          
RLAPI void EndMode2D(void);                                       
RLAPI void BeginMode3D(RLCamera3D camera);                          
RLAPI void EndMode3D(void);                                       
RLAPI void BeginTextureMode(RLRenderTexture2D target);              
RLAPI void EndTextureMode(void);                                  
RLAPI void BeginShaderMode(RLShader shader);                        
RLAPI void EndShaderMode(void);                                   
RLAPI void BeginBlendMode(int mode);                              
RLAPI void EndBlendMode(void);                                    
RLAPI void BeginScissorMode(int x, int y, int width, int height); 
RLAPI void EndScissorMode(void);                                  
RLAPI void BeginVrStereoMode(RLVrStereoConfig config);              
RLAPI void EndVrStereoMode(void);                                 
RLAPI RLVrStereoConfig LoadVrStereoConfig(RLVrDeviceInfo device);     
RLAPI void UnloadVrStereoConfig(RLVrStereoConfig config);           
RLAPI RLShader LoadShader(const char *vsFileName, const char *fsFileName);   
RLAPI RLShader LoadShaderFromMemory(const char *vsCode, const char *fsCode); 
RLAPI bool IsShaderValid(RLShader shader);                                   
RLAPI int GetShaderLocation(RLShader shader, const char *uniformName);       
RLAPI int GetShaderLocationAttrib(RLShader shader, const char *attribName);  
RLAPI void SetShaderValue(RLShader shader, int locIndex, const void *value, int uniformType);               
RLAPI void SetShaderValueV(RLShader shader, int locIndex, const void *value, int uniformType, int count);   
RLAPI void SetShaderValueMatrix(RLShader shader, int locIndex, RLMatrix mat);         
RLAPI void SetShaderValueTexture(RLShader shader, int locIndex, RLTexture2D texture); 
RLAPI void UnloadShader(RLShader shader);                                    
#define GetMouseRay GetScreenToWorldRay     
RLAPI RLRay GetScreenToWorldRay(RLVector2 position, RLCamera camera);         
RLAPI RLRay GetScreenToWorldRayEx(RLVector2 position, RLCamera camera, int width, int height); 
RLAPI RLVector2 GetWorldToScreen(RLVector3 position, RLCamera camera);        
RLAPI RLVector2 GetWorldToScreenEx(RLVector3 position, RLCamera camera, int width, int height); 
RLAPI RLVector2 GetWorldToScreen2D(RLVector2 position, RLCamera2D camera);    
RLAPI RLVector2 GetScreenToWorld2D(RLVector2 position, RLCamera2D camera);    
RLAPI RLMatrix GetCameraMatrix(RLCamera camera);                            
RLAPI RLMatrix GetCameraMatrix2D(RLCamera2D camera);                        
RLAPI void SetTargetFPS(int fps);                                 
RLAPI float GetFrameTime(void);                                   
RLAPI double GetTime(void);                                       
RLAPI int GetFPS(void);                                           
RLAPI void SwapScreenBuffer(void);                                
RLAPI void PollInputEvents(void);                                 
RLAPI void WaitTime(double seconds);                              
RLAPI void SetRandomSeed(unsigned int seed);                      
RLAPI int GetRandomValue(int min, int max);                       
RLAPI int *LoadRandomSequence(unsigned int count, int min, int max); 
RLAPI void UnloadRandomSequence(int *sequence);                   
RLAPI void TakeScreenshot(const char *fileName);                  
RLAPI void SetConfigFlags(unsigned int flags);                    
RLAPI void OpenURL(const char *url);                              
RLAPI void TraceLog(int logLevel, const char *text, ...);         
RLAPI void SetTraceLogLevel(int logLevel);                        
RLAPI void *MemAlloc(unsigned int size);                          
RLAPI void *MemRealloc(void *ptr, unsigned int size);             
RLAPI void MemFree(void *ptr);                                    
RLAPI void SetLoadFileDataCallback(LoadFileDataCallback callback); 
RLAPI void SetSaveFileDataCallback(SaveFileDataCallback callback); 
RLAPI void SetLoadFileTextCallback(LoadFileTextCallback callback); 
RLAPI void SetSaveFileTextCallback(SaveFileTextCallback callback); 