engine/thirdparty/raylib55.c3i


// Drawing-related functions
fn void clearBackground(RLColor color) @cname("ClearBackground");                            // Set background color (framebuffer clear color)
fn void beginDrawing() @cname("BeginDrawing");                                             // Setup canvas (framebuffer) to start drawing
fn void endDrawing() @cname("EndDrawing");                                                 // End canvas drawing and swap buffers (double buffering)
fn void beginMode2D(RLCamera2D camera) @cname("BeginMode2D");                                // Begin 2D mode with custom camera (2D)
fn void endMode2D() @cname("EndMode2D");                                                   // Ends 2D mode with custom camera
fn void beginMode3D(RLCamera3D camera) @cname("BeginMode3D");                                // Begin 3D mode with custom camera (3D)
fn void endMode3D() @cname("EndMode3D");                                                   // Ends 3D mode and returns to default 2D orthographic mode
fn void beginTextureMode(RLRenderTexture2D target) @cname("BeginTextureMode");              // Begin drawing to render texture
fn void endTextureMode() @cname("EndTextureMode");                                        // Ends drawing to render texture
fn void beginShaderMode(RLShader shader) @cname("BeginShaderMode");                         // Begin custom shader drawing
fn void endShaderMode() @cname("EndShaderMode");                                          // End custom shader drawing (use default shader)
fn void beginBlendMode(CInt mode) @cname("BeginBlendMode");                                // Begin blending mode (alpha, additive, multiplied, subtract, custom)
fn void endBlendMode() @cname("EndBlendMode");                                            // End blending mode (reset to default: alpha blending)
fn void setBlendFactors(CInt glSrcFactor, CInt glDstFactor, CInt glEquation) @cname("rlSetBlendFactors"); // Set blending mode factor and equation (using OpenGL factors)
fn void setBlendFactorsSeparate(CInt glSrcRGB, CInt glDstRGB, CInt glSrcAlpha, CInt glDstAlpha, CInt glEqRGB, CInt glEqAlpha) @cname("rlSetBlendFactorsSeparate"); // Set blending mode factors and equations separately (using OpenGL factors)
fn void setBlendMode(CInt mode) @cname("rlSetBlendMode");                                  // Needs to be called AFTER rlSetBlendFactors() or rlSetBlendFactorsSeparate()
fn void beginScissorMode(CInt x, CInt y, CInt w, CInt h) @cname("BeginScissorMode");          // Begin scissor mode (define screen area for following drawing)
fn void endScissorMode() @cname("EndScissorMode");                                        // End scissor mode
fn void beginVrStereoMode(RLVrStereoConfig config) @cname("BeginVrStereoMode");            // Begin stereo rendering (requires VR simulator)
fn void endVrStereoMode() @cname("EndVrStereoMode");                                     // End stereo rendering (requires VR simulator)

// VR stereo config functions for VR simulator
fn RLVrStereoConfig loadVrStereoConfig(RLVrDeviceInfo device) @cname("LoadVrStereoConfig");  // Load VR stereo config for VR simulator device parameters
fn void unloadVrStereoConfig(RLVrStereoConfig config) @cname("UnloadVrStereoConfig");      // Unload VR stereo config

// RLShader management functions
// NOTE: RLShader functionality is not available on OpenGL 1.1
fn RLShader loadShader(ZString vsFileName, ZString fsFileName) @cname("LoadShader");          // Load shader from files and bind default locations
fn RLShader loadShaderFromMemory(ZString vs, ZString fs) @cname("LoadShaderFromMemory");      // Load shader from code strings and bind default locations
fn bool isShaderValid(RLShader shader) @cname("IsShaderValid");                               // Check if a shader is ready
//fn bool RLShader.isValid(self) @cname("IsShaderValid");                              // Check if a shader is ready
fn CInt getShaderLocation(RLShader shader, ZString uniformName) @cname("GetShaderLocation");   // Get shader uniform location
fn CInt RLShader.getUniformLocation(self, ZString uniformName) @cname("GetShaderLocation");   // Get shader uniform location
fn CInt getShaderLocationAttrib(RLShader shader, ZString attr) @cname("GetShaderLocationAttrib");  // Get shader attribute location
fn CInt RLShader.getAttributeLocation(self, ZString attr) @cname("GetShaderLocationAttrib");  // Get shader attribute location
fn void setShaderValue(RLShader shader, CInt locIndex, void* value, CInt uniformType) @cname("SetShaderValue"); // Set shader uniform value
fn void setShaderValueV(RLShader shader, CInt locIndex, void* value, CInt uniformType, CInt count) @cname("SetShaderValueV");   // Set shader uniform value vector
fn void setShaderValueMatrix(RLShader shader, CInt locIndex, RLMatrix mat) @cname("SetShaderValueMatrix"); // Set shader uniform value (matrix 4x4)
fn void setShaderValueTexture(RLShader shader, CInt locIndex, RLTexture2D texture) @cname("SetShaderValueTexture"); // Set shader uniform value for texture (sampler2d)
fn void unloadShader(RLShader shader) @cname("UnloadShader");                                // Unload shader from GPU memory (VRAM)

//
fn void RLShader.setValue(self, CInt locIndex, void* value, CInt uniformType) @cname("SetShaderValue"); // Set shader uniform value
fn void RLShader.setValueV(self, CInt locIndex, void* value, CInt uniformType, CInt count) @cname("SetShaderValueV");   // Set shader uniform value vector
fn void RLShader.setValueMatrix(self, CInt locIndex, RLMatrix mat) @cname("SetShaderValueMatrix"); // Set shader uniform value (matrix 4x4)
fn void RLShader.setValueTexture(self, CInt locIndex, RLTexture2D texture) @cname("SetShaderValueTexture"); // Set shader uniform value for texture (sampler2d)
fn void RLShader.unload(self) @cname("UnloadShader");                                // Unload shader from GPU memory (VRAM)

// Screen-space-related functions
//#define GetMouseRay GetScreenToWorldRay     // Compatibility hack for previous raylib versions
fn RLRay getScreenToWorldRay(RLVector2 mousePosition, RLCamera camera) @cname("GetScreenToWorldRay"); // Get a ray trace from mouse position
fn RLRay getScreenToWorldRayEx(RLVector2 position, RLCamera camera, CInt width, CInt height) @cname("GetScreenToWorldRayEx"); // Get a ray trace from screen position (i.e mouse) in a viewport
fn RLVector2 getWorldToScreen(RLVector3 position, RLCamera camera) @cname("GetWorldToScreen"); // Get the screen space position for a 3d world space position
fn RLVector2 getWorldToScreenEx(RLVector3 position, RLCamera camera, CInt width, CInt height) @cname("GetWorldToScreenEx"); // Get size position for a 3d world space position
fn RLVector2 getWorldToScreen2D(RLVector2 position, RLCamera2D camera) @cname("GetWorldToScreen2D"); // Get the screen space position for a 2d camera world space position
fn RLVector2 getScreenToWorld2D(RLVector2 position, RLCamera2D camera) @cname("GetScreenToWorld2D"); // Get the world space position for a 2d camera screen space position
fn RLMatrix getCameraMatrix(RLCamera camera) @cname("GetCameraMatrix");                            // Get camera transform matrix (view matrix)
fn RLMatrix getCameraMatrix2D(RLCamera2D camera) @cname("GetCameraMatrix2D");                 // Get camera 2d transform matrix

// Timing-related functions
fn void setTargetFPS(CInt fps) @cname("SetTargetFPS");                                     // Set target FPS (maximum)
fn CInt getFPS() @cname("GetFPS");                                                          // Get current FPS
fn float getFrameTime() @cname("GetFrameTime");                                           // Get time in seconds for last frame drawn (delta time)
fn double getTime() @cname("GetTime");                                                     // Get elapsed time in seconds since InitWindow()

// Custom frame control functions
// NOTE: Those functions are intended for advance users that want full control over the frame processing
// By default EndDrawing() does this job: draws everything + SwapScreenBuffer() + manage frame timming + PollInputEvents()
// To avoid that behaviour and control frame processes manually, enable in config.h: SUPPORT_CUSTOM_FRAME_CONTROL
fn void swapScreenBuffer() @cname("SwapScreenBuffer");                                    // Swap back buffer with front buffer (screen drawing)
fn void pollInputEvents() @cname("PollInputEvents");                                      // Register all input events
fn void waitTime(float ms) @cname("WaitTime");                                             // Wait for some milliseconds (halt program execution)

// Random values generation functions
fn CInt getRandomValue(CInt min, CInt max) @cname("GetRandomValue");                          // Get a random value between min and max (both included)
fn void setRandomSeed(CUInt seed) @cname("SetRandomSeed");                                  // Set the seed for the random number generator
fn CInt* loadRandomSequence(CUInt count, CInt min, CInt max) @cname("LoadRandomSequence");     // Load random values sequence, no values repeated
fn void unloadRandomSequence(CInt *sequence) @cname("UnloadRandomSequence");                // Unload random values sequence

// Misc. functions
// NOTE(HM) note the parameter for takeScreenshot(..) is fileName with extension, not filePath!!!
fn void takeScreenshot(ZString fileName) @cname("TakeScreenshot");                         // Takes a screenshot of current screen (filename extension defines format)
fn void setConfigFlags(RLConfigFlag flags) @cname("SetConfigFlags");                         // Setup init configuration flags (view FLAGS)
fn void openURL(ZString url) @cname("OpenURL");                                            // Open URL with default system browser (if available)

fn void traceLog(RLTraceLogLevel logLevel, char* text, ...) @cname("TraceLog");              // Show trace log messages (LOG_DEBUG, LOG_INFO, LOG_WARNING, LOG_ERROR...)
fn void setTraceLogLevel(RLTraceLogLevel logLevel) @cname("SetTraceLogLevel");               // Set the current threshold (minimum) log level
fn void* memAlloc(CInt size) @cname("MemAlloc");                                            // Internal memory allocator
fn void* memRealloc(void* ptr, CInt size) @cname("MemRealloc");                             // Internal memory reallocator
fn void memFree(void* ptr) @cname("MemFree");                								// Internal memory free

// Set custom callbacks
// WARNING: Callbacks setup is intended for advance users
fn void setLoadFileDataCallback(LoadFileDataCallback callback) @cname("SetLoadFileDataCallback"); // Set custom file binary data loader
fn void setSaveFileDataCallback(SaveFileDataCallback callback) @cname("SetSaveFileDataCallback"); // Set custom file binary data saver
fn void setLoadFileTextCallback(LoadFileTextCallback callback) @cname("SetLoadFileTextCallback"); // Set custom file text data loader
fn void setSaveFileTextCallback(SaveFileTextCallback callback) @cname("SetSaveFileTextCallback"); // Set custom file text data saver
